// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/GraphEdge.vue snapshot connected 1`] = `
<g
  class="edge"
  data-type="edge"
  stroke-opacity="1"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="orange"
    stroke-width="3"
  />
  <!--v-if-->
  <g
    fill="none"
    stroke="orange"
    stroke-width="5"
  >
    <circle
      cx="1"
      cy="2"
      r="7"
    />
    <circle
      cx="10"
      cy="20"
      r="7"
    />
  </g>
</g>
`;

exports[`src/components/elements/GraphEdge.vue snapshot connecting 1`] = `
<g
  class="edge"
  data-type="edge"
  stroke-opacity="0.5"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="orange"
    stroke-width="3"
  />
  <!--v-if-->
  <g
    fill="none"
    stroke="orange"
    stroke-width="5"
  >
    <circle
      cx="1"
      cy="2"
      r="7"
    />
    <circle
      cx="10"
      cy="20"
      r="7"
    />
  </g>
</g>
`;

exports[`src/components/elements/GraphEdge.vue snapshot initial 1`] = `
<g
  class="edge"
  data-type="edge"
  stroke-opacity="1"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#888"
    stroke-width="3"
  />
  <path
    class="highlight"
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#888"
    stroke-width="9"
  />
  <!--v-if-->
</g>
`;
